# frost

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  Rocket.toml  deploy.sh  pack-local.sh  package-lock.json  package.json  start.sh  stop.sh  ui-sketch.drawio  webpack.config.js
js/: app.js  cookies.js  index.js  location.js  notifications.js  places.js  web-storage.js
pkg/: index.css  index.html  index.js
src/: lib.rs  main.rs  utils.rs
src/backend/: mod.rs
src/common/: mod.rs
src/components/: frost.rs  mod.rs  record.rs
src/frontend/: frost.rs  js.rs  mod.rs  record.rs  webapp.rs
src/frontend/components/: frost.rs  header.rs  mod.rs  place_picker.rs  record.rs  status.rs
static/: index.html  layout.html  manifest.json  style.css
test/: places.json  places_min.json
