[package]
name = "frost-js"
version = "0.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Geolocation", "Navigator", "Window", "console"] }
js-sys = "0.3"
brightsky-rs = { path = "../brightsky-rs" }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
reqwest = { version = "0.10", features = ["blocking"] }
yew = "0.17"
rocket = "0.4"
anyhow = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
