[package]
name = "frost"
version = "0.1.0"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
edition = "2018"
description = "A weather forecast web app focused on warning users about low temperatures."
repository = "https://github.com/bbmsoft/frost.git"
license = "MIT OR Apache-2.0"
keywords = ["weather", "webapp"]
homepage = "https://frost.bbmsoft.net/"

[badges]
travis-ci = { repository = "https://github.com/bbmsoft/frost.git", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]

[dependencies]
brtsky = "0.1.1"
wasm-bindgen = { version = "0.2", features = ["nightly"] }
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["HtmlElement"] }
js-sys = "0.3"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
reqwest = { version = "0.10", features = ["blocking"] }
yew = "0.17"
rocket = "0.4"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15"
http = "0.2"
log = "0.4"
env_logger = "0.8"
wasm-logger = "0.2"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = { version = "0.1"}

